RESOLVED FIXED 182938
Copying a list from Microsoft Word to TinyMCE fails when mso-list is the first property
https://bugs.webkit.org/show_bug.cgi?id=182938
Summary Copying a list from Microsoft Word to TinyMCE fails when mso-list is the firs...
Ryosuke Niwa
Reported 2018-02-19 13:23:37 PST
See https://bugs.webkit.org/show_bug.cgi?id=182564#c51 When mso-list is the first CSS property, our workaround doesn't kick in.
Attachments
Fixes the bug (6.61 KB, patch)
2018-03-30 00:00 PDT, Ryosuke Niwa
no flags
Radar WebKit Bug Importer
Comment 1 2018-02-19 13:29:41 PST
Andrew Herron
Comment 2 2018-02-19 15:43:12 PST
As we finished capturing the Safari clipboard data for our test documents, another failing case popped up - Word can also put newlines in the style attribute :) <p class=MsoNormal style='margin-left:0cm;text-indent:0cm;mso-pagination:none; mso-list:l0 level1 lfo1;mso-layout-grid-align:none;text-autospace:none'>
Ryosuke Niwa
Comment 3 2018-03-30 00:00:29 PDT
Created attachment 336844 [details] Fixes the bug
Wenson Hsieh
Comment 4 2018-03-30 12:28:18 PDT
Comment on attachment 336844 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=336844&action=review r=me > Source/WebCore/editing/markup.cpp:432 > + return style.startsWith("mso-list:") || style.contains(";mso-list:") || style.contains("\nmso-list:"); I wonder if we should just regex this at some point :P
Ryosuke Niwa
Comment 5 2018-03-30 16:31:47 PDT
(In reply to Wenson Hsieh from comment #4) > Comment on attachment 336844 [details] > Fixes the bug > > View in context: > https://bugs.webkit.org/attachment.cgi?id=336844&action=review > > r=me > > > Source/WebCore/editing/markup.cpp:432 > > + return style.startsWith("mso-list:") || style.contains(";mso-list:") || style.contains("\nmso-list:"); > > I wonder if we should just regex this at some point :P Haha, I did think about that.
Ryosuke Niwa
Comment 6 2018-03-30 16:32:04 PDT
Comment on attachment 336844 [details] Fixes the bug Thanks for the review. We'd consider using a regular expression if we find more bugs.
WebKit Commit Bot
Comment 7 2018-03-30 16:57:55 PDT
Comment on attachment 336844 [details] Fixes the bug Clearing flags on attachment: 336844 Committed r230120: <https://trac.webkit.org/changeset/230120>
WebKit Commit Bot
Comment 8 2018-03-30 16:57:57 PDT
All reviewed patches have been landed. Closing bug.
Andrew Herron
Comment 9 2018-04-03 00:48:52 PDT
I have just downloaded r230195 and confirmed that this seems to fix pasting for the relevant documents in our test suite. Thanks :D
Note You need to log in before you can comment on or make changes to this bug.