Copying a list from Microsoft Word to TinyMCE fails when mso-list is the first property https://bugs.webkit.org/show_bug.cgi?id=182938 <rdar://problem/37683007>

Reviewed by Wenson Hsieh.

Source/WebCore:

Made the logic to detect Microsoft Word's mso-list CSS property more generic by detecting
inline styles which start with "mso-list:" and one which line-break right before it: "\nmso-list:"

Tests: PasteHTML.PreservesMSOList

* editing/markup.cpp:
(WebCore::StyledMarkupAccumulator::shouldPreserveMSOListStyleForElement):

Tools:

Added more assertions to PasteHTML.PreservesMSOList for preserving an inline style which starts with mso-list
or the one which line-breaks right before it.

* TestWebKitAPI/Tests/WebKitCocoa/PasteHTML.mm:
* TestWebKitAPI/Tests/WebKitCocoa/mso-list.html:


Canonical link: https://commits.webkit.org/199746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230120 268f45cc-cd09-0410-ab3c-d52691b4dbfc